# CareerLens-AI

./: README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/agents/: orchestrator.py  roadmap_agent.py
backend/app/api/v1/: assessment.py  chat.py  portfolio.py  roadmap.py
backend/app/services/: cache.py  embedding_service.py  vector_store.py
backend/app/tools/: course_fetcher.py  gap_analyser.py  github_analyser.py  resume_parser.py  role_matcher.py  skill_extractor.py
backend/data/: golden_dataset.json  roadmap_templates.py  roles_seed.json  skills_taxonomy.json
backend/tests/eval/: prompt_regression.py  run_evals.py
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/assessment/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/portfolio/: page.tsx
frontend/src/app/roadmap/: page.tsx
frontend/src/components/: Navbar.tsx
frontend/src/components/assessment/: AssessmentWizard.tsx
frontend/src/components/chat/: ChatInterface.tsx
frontend/src/components/portfolio/: PortfolioFeedback.tsx
frontend/src/components/roadmap/: RoadmapKanban.tsx
frontend/src/hooks/: useStreamingChat.ts
