[project]
name = "career-counselor-backend"
version = "0.1.0"
description = "FastAPI backend for Career Counselor Agent Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "langchain>=0.1.13",
    "langchain-openai>=0.1.1",
    "langchain-community>=0.0.29",
    "httpx>=0.27.0",
    "pypdf>=4.1.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.28",
    "redis>=5.0.3",
    "chromadb>=0.4.24",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
